--- a/frontend/app/src/app/globals.css
+++ b/frontend/app/src/app/globals.css
@@ -47,14 +47,10 @@
   --radius-4xl: calc(var(--radius) + 16px);
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif, serif;
-}
-
 :root {
   --radius: 0.625rem;
-  --background: oklch(0.1265 0.0247 275.29);
-  --foreground: oklch(0.145 0 0);
+  --background: oklch(0.1408 0.0044 285.82);
+  --foreground: oklch(0.95 0.05 285.82);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
@@ -125,6 +121,6 @@ body {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-mono;
   }
 }
